# serverless-video-transcoder

./: template.yaml
functions/controller_function/: Cargo.toml  app.py
functions/controller_function/src/: main.rs
functions/merge_video_function/: app.py
functions/merge_video_function/src/: main.rs
functions/transcode_video_function/: Cargo.toml  app.py
functions/transcode_video_function/src/: main.rs
functions/trigger_statemachine_function/: Cargo.toml
functions/trigger_statemachine_function/src/: main.rs
statemachines/: main.asl.json
