[package]
name = "controller_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambda_runtime = "0.10.0"
serde_json = "1.0.114"
aws-config = "1.1.7"
tokio = "1.36.0"
aws-sdk-s3 = "1.17.0"
aws_lambda_events = { version = "0.15.0", default-features = false, features = [
    "s3",
] }
serde = { version = "1.0.197", features = ["derive"] }

