[package]
name = "trigger_statemachine_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambda_runtime = "0.10.0"
serde_json = "1.0.114"
aws-config = "1.1.7"
tokio = "1.36.0"
aws-sdk-s3 = "1.17.0"
aws_lambda_events = { version = "0.15.0", default-features = false, features = [
    "s3",
] }
aws-sdk-dynamodb = "1.16.0"
uuid = {version ="1.7.0", features = ["v4"] }
aws-sdk-sfn = "1.15.0"
urlparse = "0.7.3"
chrono = "0.4.34"

